# humanshell

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  publish_crates.yml
prompts/: main.txt
shell_integrations/: bash.sh  humanshell.plugin.zsh  zsh.zsh
src/: config.rs  hs.rs  main.rs  system_info.rs
src/providers/: anthropic.rs  openai.rs
