[package]
name = "humanshell"
description = "A command-line tool that translates human expressions into shell commands"
keywords = ["human", "ai", "shell", "bash", "zsh"]
categories = ["command-line-utilities"]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Juan Lago <juanparati@gmail.com>"]

[profile.release]
strip = true

[[bin]]
name = "hs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
sysinfo = "0.37.0"
dirs-next = "2.0.0"
